--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "dev": "backpack dev"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "mongoose": "^5.4.1",
+    "uuid": "^3.3.2",
     "youtube-dl": "^1.12.2"
   },
   "devDependencies": {
